--- a/meta/src/webconfig.properties
+++ b/meta/src/webconfig.properties
@@ -2,6 +2,7 @@
 #\u5f53\u524dOS\u5e73\u53f0  windows/linux
 platform=windows
 secure=http
+DEV_TEST_IP=172.31.26.4
 DIS_IP=172.16.0
 releaseEnvironment=DEV
 
@@ -54,13 +55,4 @@ DEV_aliONS_AK=LTAIecU1X1VITP1N
 DEV_aliONS_SK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
 DIS_aliONS_AK=LTAIecU1X1VITP1N
 DIS_aliONS_SK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
-
-
-LOCAL_aliONS_server=http://onsaddr-internet.aliyun.com/rocketmq/nsaddr4client-internet
-DEV_aliONS_server=http://onsaddr-internal.aliyun.com:8080/rocketmq/nsaddr4client-internal
-DIS_aliONS_server=http://onsaddr-internal.aliyun.com:8080/rocketmq/nsaddr4client-internal
-
-EXCHANGE_BTC_TOPIC=gbcp-exchange-BTC
-EXCHANGE_GBC_TOPIC=gbcp-exchange-GBC
-
 
