--- a/meta/src/webconfig.properties
+++ b/meta/src/webconfig.properties
@@ -3,8 +3,15 @@
 platform=windows
 secure=http
 DEV_TEST_IP=172.31.26.4
+
 DIS_IP=172.16.0
 releaseEnvironment=DEV
+
+DEV_DAILY_TASK=172.31.26.4
+DIS_DAILY_TASK=172.31.119.22
+
+
+
 
 #ak sk配置#
 LOCAL_aliAK=LTAIecU1X1VITP1N
