--- a/meta/src/webconfig.properties
+++ b/meta/src/webconfig.properties
@@ -3,12 +3,13 @@
 platform=windows
 secure=http
 DEV_TEST_IP=172.31.26.4
+DIS_TEST_IP=172.31.26.4
 
-DIS_IP=172.16.0
+DIS_IP=172.31.119
 releaseEnvironment=DEV
 
 DEV_DAILY_TASK=172.31.26.4
-DIS_DAILY_TASK=172.31.119.22
+DIS_DAILY_TASK=172.31.119.226
 
 
 
