--- a/meta/src/webconfig.properties
+++ b/meta/src/webconfig.properties
@@ -22,25 +22,11 @@ DEV_aliSK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
 DIS_aliAK=LTAIecU1X1VITP1N
 DIS_aliSK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
 
-LOCAL_LKL_CALLBACK_PAGE=http://47.94.72.66/lkl/payOrder/callbackPage
-LOCAL_LKL_CALLBACK=http://47.94.72.66/lkl/payOrder/callback
-
-DEV_LKL_CALLBACK_PAGE=http://47.94.72.66/lkl/payOrder/callbackPage
-DEV_LKL_CALLBACK=http://47.94.72.66/lkl/payOrder/callback
-
-DIS_LKL_CALLBACK_PAGE=https://api.kmsr888.com/lkl/payOrder/callbackPage
-DIS_LKL_CALLBACK=https://api.kmsr888.com/lkl/payOrder/callback
 
 
 ##########redis配置##################
-redisDB=REDIS_SESSION,REDIS_COMMON
-LOCAL_REDIS_SESSION_HOST=123.56.70.244
-LOCAL_REDIS_SESSION_PWD=6kMPJgsV
-LOCAL_REDIS_SESSION_PORT=56379
+redisDB=REDIS_COMMON
 
-DEV_REDIS_SESSION_HOST=123.56.70.244
-DEV_REDIS_SESSION_PWD=6kMPJgsV
-DEV_REDIS_SESSION_PORT=56379
 
 LOCAL_REDIS_COMMON_HOST=123.56.70.244
 LOCAL_REDIS_COMMON_PWD=6kMPJgsV
@@ -51,16 +37,9 @@ DEV_REDIS_COMMON_PWD=6kMPJgsV
 DEV_REDIS_COMMON_PORT=56379
 
 
-DIS_REDIS_SESSION_HOST=r-uf67f02ecd3b4314.redis.rds.aliyuncs.com
-DIS_REDIS_SESSION_PWD=6kMPJgsV
-DIS_REDIS_SESSION_PORT=6379
 
-DIS_REDIS_COMMON_HOST=r-uf67f02ecd3b4314.redis.rds.aliyuncs.com
+DIS_REDIS_COMMON_HOST=r-j6c477edd50db0c4.redis.rds.aliyuncs.com
 DIS_REDIS_COMMON_PWD=6kMPJgsV
 DIS_REDIS_COMMON_PORT=6379
 
-DEV_aliONS_AK=LTAIecU1X1VITP1N
-DEV_aliONS_SK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
-DIS_aliONS_AK=LTAIecU1X1VITP1N
-DIS_aliONS_SK=mKJmmgNMmFhlYKEgUoVrBi2cYiObOx
 
