--- a/api/src/webconfig.properties
+++ b/api/src/webconfig.properties
@@ -2,7 +2,7 @@
 #\u5f53\u524dOS\u5e73\u53f0  windows/linux
 platform=windows
 secure=http
-DIS_IP=172.16.0
+DIS_IP=172.31.119
 releaseEnvironment=DEV
 DIS_WEB_IP=https://coin.kmsr888.com
 #DEV_WEB_IP=http://123.56.234.186:8088
@@ -28,39 +28,11 @@ DEV_bucket=gbcp-trading
 DIS_bucket=gbcp-trading
 
 
-#sms配置#
-DEV_signName=GBC
-DEV_SMS_TEMPLATE_CODE={userReg:"SMS_74540024",updateLoginPwd:"SMS_74730019",updateTransactionPwd:"SMS_74570017",restTransactionPwd:"SMS_74600019",restLoginPwd:"SMS_74605019",forgetLoginPwd:"SMS_74570018",addCoinAddress:"SMS_74710021",BalanceWithdrawal:"SMS_74540026",unbindMobilePhone:"SMS_74570019",bindMobilePhone:"SMS_74615028"}
-DIS_signName=GBC
-DIS_SMS_TEMPLATE_CODE={userReg:"SMS_74540024",updateLoginPwd:"SMS_74730019",updateTransactionPwd:"SMS_74570017",restTransactionPwd:"SMS_74600019",restLoginPwd:"SMS_74605019",forgetLoginPwd:"SMS_74570018",addCoinAddress:"SMS_74710021",BalanceWithdrawal:"SMS_74540026",unbindMobilePhone:"SMS_74570019",bindMobilePhone:"SMS_74615028"}
-
-LOCAL_LKL_CALLBACK_PAGE=http://47.94.72.66/lkl/callbackPage
-LOCAL_LKL_CALLBACK=http://47.94.72.66/lkl/callback
-
-DEV_LKL_CALLBACK_PAGE=http://47.94.72.66/lkl/callbackPage
-DEV_LKL_CALLBACK=http://47.94.72.66/lkl/callback
-
-DIS_LKL_CALLBACK_PAGE=https://api.kmsr888.com/lkl/callbackPage
-DIS_LKL_CALLBACK=https://api.kmsr888.com/lkl/callback
-
-LOCAL_ZSS_KEY=FDA32R3J2R23NR32IR32H3BQGCSZ93DI
-DEV_ZSS_KEY=FDA32R3J2R23NR32IR32H3BQGCSZ93DI
-DIS_ZSS_KEY=FDA32R3J2R23NR32IR32H3BQGCSZ93DI
-
-LOCAL_ZSS_ORG_CODE=200001019
-DEV_ZSS_ORG_CODE=200001019
-DIS_ZSS_ORG_CODE=200001019
 
 
 ##########redis配置##################
-redisDB=REDIS_SESSION,REDIS_COMMON
-LOCAL_REDIS_SESSION_HOST=123.56.70.244
-LOCAL_REDIS_SESSION_PWD=6kMPJgsV
-LOCAL_REDIS_SESSION_PORT=56379
+redisDB=REDIS_COMMON
 
-DEV_REDIS_SESSION_HOST=123.56.70.244
-DEV_REDIS_SESSION_PWD=6kMPJgsV
-DEV_REDIS_SESSION_PORT=56379
 
 LOCAL_REDIS_COMMON_HOST=123.56.70.244
 LOCAL_REDIS_COMMON_PWD=6kMPJgsV
@@ -71,10 +43,7 @@ DEV_REDIS_COMMON_PWD=6kMPJgsV
 DEV_REDIS_COMMON_PORT=56379
 
 
-DIS_REDIS_SESSION_HOST=r-uf67f02ecd3b4314.redis.rds.aliyuncs.com
-DIS_REDIS_SESSION_PWD=6kMPJgsV
-DIS_REDIS_SESSION_PORT=6379
 
-DIS_REDIS_COMMON_HOST=r-uf67f02ecd3b4314.redis.rds.aliyuncs.com
+DIS_REDIS_COMMON_HOST=r-j6c477edd50db0c4.redis.rds.aliyuncs.com
 DIS_REDIS_COMMON_PWD=6kMPJgsV
 DIS_REDIS_COMMON_PORT=6379
