--- a/api/web/WEB-INF/web.xml
+++ b/api/web/WEB-INF/web.xml
@@ -8,11 +8,11 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.o2btc.trading.apis,com.o2btc.trading.filter</param-value>
+            <param-value>com.mobius.apis,com.mobius.filter</param-value>
         </init-param>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.o2btc.trading.filter.CustomApplication</param-value>
+            <param-value>com.mobius.filter.CustomApplication</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -30,22 +30,22 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>guiceSideDispatcher</filter-name>
-        <filter-class>org.guiceside.web.dispatcher.FilterDispatcher</filter-class>
-        <init-param>
-            <param-name>exclusions</param-name>
-            <param-value>*.*</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>guiceSideDispatcher</filter-name>
-        <url-pattern>/lkl/*</url-pattern>
-    </filter-mapping>
-    <filter-mapping>
-        <filter-name>guiceSideDispatcher</filter-name>
-        <url-pattern>/zss/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>guiceSideDispatcher</filter-name>-->
+        <!--<filter-class>org.guiceside.web.dispatcher.FilterDispatcher</filter-class>-->
+        <!--<init-param>-->
+            <!--<param-name>exclusions</param-name>-->
+            <!--<param-value>*.*</param-value>-->
+        <!--</init-param>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>guiceSideDispatcher</filter-name>-->
+        <!--<url-pattern>/lkl/*</url-pattern>-->
+    <!--</filter-mapping>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>guiceSideDispatcher</filter-name>-->
+        <!--<url-pattern>/zss/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
 
     <listener>
@@ -58,7 +58,7 @@
     <!--<listener-class>org.guiceside.web.listener.Log4jConfigListener</listener-class>-->
     <!--</listener>-->
     <listener>
-        <listener-class>com.o2btc.trading.startup.PlatformLoaderListener</listener-class>
+        <listener-class>com.mobius.startup.PlatformLoaderListener</listener-class>
     </listener>
     <welcome-file-list>
         <welcome-file>index.htm</welcome-file>
